apps/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-one
  namespace: argocd
  labels:
    app: nginx-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-one
  template:
    metadata:
      labels:
        app: nginx-one
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-one
  namespace: argocd
  labels:
    app: nginx-one
spec:
  type: ClusterIP
  selector:
    app: nginx-one
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
