apps/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: root-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: "argocd.godwinogbara.com"
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  number: 80
            pathType: Prefix
            path: /
    - host: "guestbook.godwinogbara.com"
      http:
        paths:
        - backend:
            service:
              name: guestbook-helm-guestbook
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: "nginx-one.godwinogbara.com"
      http:
        paths:
        - backend:
            service:
              name: nginx-one
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: "nginx-two.godwinogbara.com"
      http:
        paths:
        - backend:
            service:
              name: nginx-two
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: "ollama.godwinogbara.com"
      http:
        paths:
        - backend:
            service:
              name: ollama
              port:
                number: 11434
          path: /
          pathType: Prefix
